[metadata]
name = alemibot
version = 0.6
author = alemidev
author_email = me@alemi.dev
description = My personal Telegram (user)bot framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alemidev/alemibot
project_urls =
    Bug Tracker = https://github.com/alemidev/alemibot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
    pyrogram==2.0.24
    setproctitle==1.3.2
    termcolor==2.1.1
    psutil==5.9.4
package_dir =
    = src
packages = find:
python_requires = >=3.6
include-package-data = True

[options.packages.find]
where = src

[options.package_data]
alemibot = py.typed
